--- a/datepicker.css
+++ b/datepicker.css
@@ -1,21 +1,93 @@
 
 
+.datepicker--holder {
+    height: 0;
+    position: relative;
+    z-index: 10000;
+}
+
+.datepicker--opened .datepicker--calendar__box {
+    display: block;
+}
+
+.datepicker--calendar__box {
+    display: none;
+    position: relative;
+    top: .5em;
+    padding: 1em;
+    border: 1px solid #ccc;
+    background: #fff;
+    font-size: 18px;
+    width: 280px;
+
+    -webkit-box-shadow: 0 6px 18px 1px rgba(0,0,0,.12);
+       -moz-box-shadow: 0 6px 18px 1px rgba(0,0,0,.12);
+            box-shadow: 0 6px 18px 1px rgba(0,0,0,.12);
+
+    -webkit-border-radius: 6px;
+       -moz-border-radius: 6px;
+            border-radius: 6px;
+}
+
+
 .datepicker--calendar {
     text-align: center;
     border-collapse: collapse;
     border-spacing: 0;
     table-layout: fixed;
+    width: 100%;
+    margin-top: 1em;
+    font-size: 1em;
 }
+
+.datepicker--calendar__date {
+    padding: .25em 0;
+    font-weight: 100;
+
+    -webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;
+}
+
 
 .datepicker--weekday {
     width: 14.285714286%; /* 100/7 */
+    font-size: .8em;
+    padding-bottom: .75em;
+    color: #999;
+    font-weight: 500;
 }
 
 
 .datepicker--day__infocus:hover,
-.datepicker--day__outfocus:hover {
+.datepicker--day__outfocus:hover,
+.datepicker--month__prev:hover,
+.datepicker--month__next:hover {
     cursor: pointer;
     background: #eee;
+}
+
+
+.datepicker--month__prev {
+    float: left;
+}
+.datepicker--month__next {
+    float: right;
+}
+
+.datepicker--month,
+.datepicker--year {
+    text-align: center;
+}
+
+.datepicker--month {
+    font-weight: 500;
+}
+
+.datepicker--year {
+    font-size: .66em;
+    color: #999;
+    font-weight: bold;
 }
 
 
@@ -24,9 +96,14 @@
 }
 
 .datepicker--day__today {
-    color: red;
+    color: #0089ec;
 }
 
 .datepicker--day__selected {
-    background: orange !important;
+    background: #0089ec !important;
+    color: #fff;
 }
+
+
+
+
