--- a/demo.css
+++ b/demo.css
@@ -10,7 +10,9 @@ a {
 
 body,
 h1,
+h2,
 h3,
+h4,
 h5 {
     font-weight: 100;
 }
@@ -23,6 +25,9 @@ fieldset {
     margin-bottom: 2.4em;
 }
 
+label:hover {
+    color: #0089ec;
+}
 
 input[type=date],
 input[type=text] {
@@ -61,7 +66,7 @@ input[type=text]:focus {
 }
 
 .holder {
-    max-width: 444px;
+    max-width: 600px;
     margin: 2.4em auto 4.2em;
 }
 
@@ -69,7 +74,10 @@ input[type=text]:focus {
     text-align: center;
 }
 
-
+.link-inherit {
+    color: inherit;
+    text-decoration: none;
+}
 
 
 
