--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*!
  * Author:         Amsul - http://amsul.ca
- * Last Updated:   12 November, 2012
+ * Last Updated:   14 November, 2012
  */
 
 
@@ -675,8 +675,8 @@ input[type=submit]:active,
 
 pre,
 code {
-    font-family: 'Consolas';
-    padding: 1px 5px 2px;
+    font-family: 'Monaco';
+    padding: 3px 5px 3px;
     border: 1px solid #e9ebeb;
     background-color: #f5f8f8;
     font-size: .9em;
@@ -689,6 +689,7 @@ code {
 pre {
     overflow-x: auto;
     padding: 1em;
+    font-size: 1em;
 }
 
 pre > code {
