demo + min/max date started

--- a/demo.css
+++ b/demo.css
@@ -19,6 +19,8 @@ h5 {
 
 h1 {
     line-height: 1.5;
+    letter-spacing: -4px;
+    font-size: 3em;
 }
 
 fieldset {
@@ -66,7 +68,7 @@ input[type=text]:focus {
 }
 
 .holder {
-    max-width: 600px;
+    max-width: 540px;
     margin: 2.4em auto 4.2em;
 }
 
