--- a/pickadate.css
+++ b/pickadate.css
@@ -17,6 +17,7 @@
     padding: 1em;
     border: 1px solid #ccc;
     background: #fff;
+    color: #000;
     font-size: 18px;
     max-width: 320px;
     min-width: 256px;
@@ -47,6 +48,7 @@
 
 .datepicker--calendar__date {
     padding: .33em 0 .25em;
+    margin: 1px;
     font-weight: 100;
 
     -webkit-border-radius: 5px;
@@ -69,7 +71,8 @@
 .datepicker--month__prev:hover,
 .datepicker--month__next:hover {
     cursor: pointer;
-    background: #eee;
+    color: #000;
+    background: #b1dcfb;
 }
 
 
@@ -122,9 +125,13 @@
 
 .datepicker--day__disabled,
 .datepicker--day__disabled:hover {
-    background: #eee;
-    color: red;
+    background: #f5f5f5;
+    color: #ddd;
     cursor: default;
+
+    -webkit-border-radius: 0;
+       -moz-border-radius: 0;
+            border-radius: 0;
 }
 
 
